--- a/0-index-PM.html
+++ b/0-index-PM.html
@@ -37,6 +37,14 @@
                 <th>关联任务</th>
             </tr>
             <tr>
+ +                 <td>80</td>
+ +                 <td>2018.4.25</td>
+ +                 <td>
+ +                     <a href="./80-pm-5.html">为什么有的App会提供短信快捷登录的功能</a>
+ +                 </td>
+ +                 <td>pm-5</td>
+ +            </tr>
+            <tr>
                 <td>2018.4.25</td>
                 <td>2018.4.25</td>
                 <td><a href="./20180425-PM10.html">如何写需求评审PPT</a></td>
